@@ -10,8 +10,8 @@ extern "C" {
 
 #define PD_MAJOR_VERSION 0
 #define PD_MINOR_VERSION 43
-#define PD_BUGFIX_VERSION 1
-#define PD_TEST_VERSION "test5"
+#define PD_BUGFIX_VERSION 2
+#define PD_TEST_VERSION "test1"
 
 /* old name for "MSW" flag -- we have to take it for the sake of many old
 "nmakefiles" for externs, which will define NT and not MSW */
